# 3.20.13 (72303) Feb 26, 2013
2/26/13 Deploy to dev for review by UBC researchers.
Sim Sharing: Removed message sent when popup triggered for wire. This is more consistent with handling of popup menus for other components.
Sim Sharing: Fixed issue where move message for junction is sent after junction is replaced, so it is no longer attached to anything.
Sim Sharing: Fixed an issue where with wire was reporting a "moved" message when the user just clicked on it.
# 3.20.12 (72278) Feb 25, 2013
2/25/13 Publishing to dev for review of sim sharing changes.
Sim Sharing: Fixed an issue where battery current could report current changes when the change was below the resolution of the message, resulting it what looked like redundant messages.
Sim Sharing: Fixed an issue where battery current could be reported as -0.00.
Sim Sharing: Made junction move messages include the components that are included in the junction.
Sim Sharing: Made the moving of a junction only send out a message when movement is complete.
Sim Sharing: Changed the messages for formation and removal of junctions to include the junction identifier.
Sim Sharing: Added "reverse light bulb" message, see #3497
Sim Sharing: Added "reverse battery" message, see #3497
Sim Sharing: Added "show value" message for all component types, see #3497
# 3.20.11 (72254) Feb 21, 2013
# 3.20.10 (72253) Feb 21, 2013
Sim Sharing: Fixed: nonContactAmmeter was sending messages when it was unchecked, see #3497
Sim Sharing: Removed message about nonContactAmmeter reported at startup, see #3497
Sim Sharing: Report location on screen where components are moved to as a parameter of the "moved" message, see #3497
Sim Sharing: Fixed: When "more volts" gets checked it should not send "user voltageEditor" changed message, see #3497
Sim Sharing: Fixed: When battery right click menu appears, it was sending user voltageEditor message, see #3497