@@ -1,3 +1,4 @@
+Sim Sharing: Changed message order so that "moved" messages precede "junction formed" messages when dragging a component creates a junction.
 # 3.20.13 (72303) Feb 26, 2013
 2/26/13 Deploy to dev for review by UBC researchers.
 Sim Sharing: Removed message sent when popup triggered for wire. This is more consistent with handling of popup menus for other components.
